syntax = "proto3";
package seiprotocol.seichain.dex;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "dex/params.proto";
import "dex/long_book.proto";
import "dex/short_book.proto";
import "dex/settlement.proto";
import "dex/enums.proto";
import "dex/price.proto";
import "dex/twap.proto";
import "dex/order.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/sei-protocol/sei-chain/x/dex/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/sei-protocol/seichain/dex/params";
  }
  // Queries a LongBook by id.
	rpc LongBook(QueryGetLongBookRequest) returns (QueryGetLongBookResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/long_book/{contractAddr}/{priceDenom}/{assetDenom}/{price}";
	}

	// Queries a list of LongBook items.
	rpc LongBookAll(QueryAllLongBookRequest) returns (QueryAllLongBookResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/long_book/{contractAddr}/{priceDenom}/{assetDenom}";
	}

// Queries a ShortBook by id.
	rpc ShortBook(QueryGetShortBookRequest) returns (QueryGetShortBookResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/short_book/{contractAddr}/{priceDenom}/{assetDenom}/{price}";
	}

	// Queries a list of ShortBook items.
	rpc ShortBookAll(QueryAllShortBookRequest) returns (QueryAllShortBookResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/short_book/{contractAddr}/{priceDenom}/{assetDenom}";
	}

	rpc GetSettlements(QueryGetSettlementsRequest) returns (QueryGetSettlementsResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/get_settlements/{contractAddr}/{priceDenom}/{assetDenom}/{orderId}";
	}

	rpc GetPrices(QueryGetPricesRequest) returns (QueryGetPricesResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/get_prices/{contractAddr}/{priceDenom}/{assetDenom}";
	}

	rpc GetTwaps(QueryGetTwapsRequest) returns (QueryGetTwapsResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/get_twaps/{contractAddr}/{lookbackSeconds}";
	}

	rpc GetOrders(QueryGetOrdersRequest) returns (QueryGetOrdersResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/get_orders/{contractAddr}/{account}";
	}

	rpc GetOrderById(QueryGetOrderByIdRequest) returns (QueryGetOrderByIdResponse) {
		option (google.api.http).get = "/sei-protocol/seichain/dex/get_order_by_id/{contractAddr}/{priceDenom}/{assetDenom}/{id}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetLongBookRequest {
	string price = 1;
	string contractAddr = 2;
	string priceDenom = 3;
	string assetDenom = 4;
}

message QueryGetLongBookResponse {
	LongBook LongBook = 1 [(gogoproto.nullable) = false];
}

message QueryAllLongBookRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
	string contractAddr = 2;
	string priceDenom = 3;
	string assetDenom = 4;
}

message QueryAllLongBookResponse {
	repeated LongBook LongBook = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetShortBookRequest {
	string price = 1;
	string contractAddr = 2;
	string priceDenom = 3;
	string assetDenom = 4;
}

message QueryGetShortBookResponse {
	ShortBook ShortBook = 1 [(gogoproto.nullable) = false];
}

message QueryAllShortBookRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
	string contractAddr = 2;
	string priceDenom = 3;
	string assetDenom = 4;
}

message QueryAllShortBookResponse {
	repeated ShortBook ShortBook = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetSettlementsRequest {
	string contractAddr = 1 [
		(gogoproto.jsontag) = "contract_address"
	];
	uint64 orderId = 2 [
		(gogoproto.jsontag) = "order_id"
	];
	string priceDenom = 3 [
		(gogoproto.jsontag) = "price_denom"
	];
	string assetDenom = 4 [
		(gogoproto.jsontag) = "asset_denom"
	];
}

message QueryGetSettlementsResponse {
	Settlements Settlements = 1 [
		(gogoproto.nullable) = false,
		(gogoproto.jsontag) = "settlements"
	];
}

message QueryGetPricesRequest {
  string priceDenom = 1;
  string assetDenom = 2;
  string contractAddr = 3;
}

message QueryGetPricesResponse {
	repeated Price prices = 1;
}

message QueryGetTwapsRequest {
	string contractAddr = 1 [
		(gogoproto.jsontag) = "contract_address"
	];
	uint64 lookbackSeconds = 2 [
		(gogoproto.jsontag) = "lookback_seconds"
	];
  }
  
  message QueryGetTwapsResponse {
	  repeated Twap twaps = 1;
  }

message QueryGetOrdersRequest{
	string contractAddr = 1 [
		(gogoproto.jsontag) = "contract_address"
	];
	string account = 2 [
		(gogoproto.jsontag) = "account"
	];
}

message QueryGetOrdersResponse {
	repeated Order orders = 1 [
		(gogoproto.jsontag) = "orders"
	];
}

message QueryGetOrderByIdRequest{
	string contractAddr = 1 [
		(gogoproto.jsontag) = "contract_address"
	];
	string priceDenom = 2 [
		(gogoproto.jsontag) = "price_denom"
	];
	string assetDenom = 3 [
		(gogoproto.jsontag) = "asset_denom"
	];
	uint64 id = 4 [
		(gogoproto.jsontag) = "id"
	];
}

message QueryGetOrderByIdResponse {
	Order order = 1 [
		(gogoproto.jsontag) = "order"
	];
}

// this line is used by starport scaffolding # 3
